Cleanup contact at Paris Tribunal (item 18)

--- a/index.html
+++ b/index.html
@@ -1190,10 +1190,10 @@
             <div class="timeline-item delivery">
                 <div class="timeline-marker">18</div>
                 <div class="timeline-content">
-                    <div class="timeline-date">2 Feb 2026</div>
+                    <div class="timeline-date">Done: 2 Feb 2026 (Deadline 27 Feb 2026, 3 months from 27 Nov 2025)</div>
                     <div class="timeline-title">Reply Submitted to Tribunal judiciaire de Paris</div>
                     <div class="timeline-description">Mail complete package with all original documents, certified translations, and French possession-of-status documents to Paris court (via tracked international postal service).  <br> <strong>Outcome:</strong> Reply delivered to Tribunal 25 days before deadline. </div>
-                    <div class="timeline-contact">Deadline: 27 February 2026 (3 months from 27 Nov 2025)</div>
+                    <div class="timeline-contact">Tribunal judiciaire de Paris, Service de la nationalité, Parvis Robert Badinter, 75017 PARIS</div>
                     <div class="timeline-status status-delivery">✓ Delivered</div>
                     <div class="document-links">
                         <a href="https://drive.google.com/file/d/1MmCsCpXVu1qE6Ybn-7SbhcEIzIL07FB-/view?usp=drive_link" class="doc-link" target="_blank">
