--- a/index.html
+++ b/index.html
@@ -1245,6 +1245,21 @@
                     <div class="timeline-title">Récépissé / acknowledgement of Tribunal's receipt of reply </div>
                     <div class="timeline-description">Tribunal expected to send an email conveying receipt of the reply to the additional document request. <br> <strong>Outcome:</strong> Two possibilities: (1) Tribunal acknowledges receipt, indicates that the file is complete, and the clock starts ticking on the first six months window within which the Tribunal is expected to reply, or (2) the Tribunal acknowledges receipt of the reply to the initial request and requests further documents and/or information.</div>
                     <div class="timeline-status status-pending">⌛ Awaiting Reply</div>
+                    <div class="document-links">
+                        <!-- New buttons for latest SDANF communications -->
+                        <!-- <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Auto-reply</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Response</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📝 My Reply</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a> -->
+                    </div>
                 </div>
             </div>
 
