Test item 19 future link placeholders

--- a/index.html
+++ b/index.html
@@ -1247,11 +1247,11 @@
                     <div class="timeline-status status-pending">⌛ Awaiting Reply</div>
                     <div class="document-links">
                         <!-- New buttons for latest SDANF communications -->
-                        <!-- <a href="..." class="doc-link" target="_blank">
-                                <span class="doc-main">📧 Auto-reply</span>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Acknowledgement</span>
                                 <span class="doc-date">XX XXX 2026</span>
                         </a>
-                        <a href="..." class="doc-link" target="_blank">
+                        <!-- <a href="..." class="doc-link" target="_blank">
                                 <span class="doc-main">📧 Response</span>
                                 <span class="doc-date">XX XXX 2026</span>
                         </a>
