Adding "Expeted" to item 19 and 20 date ranges

--- a/index.html
+++ b/index.html
@@ -1241,9 +1241,9 @@
             <div class="timeline-item pending">
                 <div class="timeline-marker">19</div>
                 <div class="timeline-content">
-                    <div class="timeline-date">Before 30 Mar 2026</div>
+                    <div class="timeline-date">Expected before 30 Mar 2026</div>
                     <div class="timeline-title">Récépissé / acknowledgement of Tribunal's receipt of reply </div>
-                    <div class="timeline-description">Tribunal expected to send an email conveying receipt of the reply to the additional document request. <br> <strong>Outcome:</strong> Two possibilities: (1) Tribunal acknowledges receipt, indicates that the file is complete, and the clock starts ticking on the first six months window within which the Tribunal is expected to reply, or (2) the Tribunal acknowledges receipt of the reply to the initial request and requests further documents and/or information.</div>
+                    <div class="timeline-description">Tribunal expected to send an email conveying receipt of the reply to the additional document request. <br> <strong>Outcome:</strong> Two possibilities: (1) Tribunal acknowledges receipt of the complete file (récépissé), and the clock starts ticking on the first six months window within which the Tribunal is expected to reply, or (2) the Tribunal acknowledges receipt of the reply to the initial request and requests further documents and/or information.</div>
                     <div class="timeline-status status-pending">⌛ Awaiting Reply</div>
                     <div class="document-links">
                         <!-- Buttons for communications -->
@@ -1268,7 +1268,7 @@
             <div class="timeline-item pending">
                 <div class="timeline-marker">20</div>
                 <div class="timeline-content">
-                    <div class="timeline-date">Between 30 Sep 2026 and 30 Sep 2027</div>
+                    <div class="timeline-date">Expected between 30 Sep 2026 and 30 Sep 2027</div>
                     <div class="timeline-title">Tribunal Decision Regarding CNF Issuance </div>
                     <div class="timeline-description">Decision and issuance of the CNF occur commonly within 6 months after the récépissé, though some files extend beyond this when the tribunal formally prolongs the investigation. Once the a récépissé is received, the “clock starts” to count the 6‑month instruction period from its date; if by the end of that period there still is no decision, that silence is treated as a refusal and the applicant then has a 6 month period to file an appeal with legal representation if the applicant wishes to contest the decision. <br> <strong>Outcome:</strong> Two possibilities: (1) Tribunal grants and issues the CNF to the applicant, or (2) the Tribunal does not grant the CNF (silence is treated as refusal).</div>
                     <div class="timeline-status status-pending">🏆 Future</div>
