Updating text in Tribunal Timeline Overview

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
         <div class="timeline-infographic">
             <div class="ti-title">Tribunal Timeline Overview</div>
             <div class="ti-subtitle">
-                From delivery of your reply to the Tribunal to the expected end of the decision period.
+                Next steps and timing from the Tribunal request for additional documentation to the expected end of the decision period. For more information, click on any dot in this Overview to go to the associated process step in the detailed timeline below.
             </div>
             <div class="ti-bar">
                 <div class="ti-step" id="ti-step-request">
